tests/ui/block-result/issue-5500.stderr
error[E0308]: mismatched types
  --> $DIR/issue-5500.rs:2:5
   |
LL | fn main() {
   |          - expected `()` because of default return type
LL |     &panic!()
   |     ^^^^^^^^^ expected `()`, found `&_`
   |
   = note: expected unit type `()`
              found reference `&_`
help: consider removing the borrow
   |
LL -     &panic!()
LL +     panic!()
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
